# stock-data-api

./: .gitignore  Dockerfile  NOTICE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
api/: Dockerfile  pyproject.toml
api/gitops/ingress/: certs.yml  controller.yml
api/gitops/keyvaults/: manifest.yml
api/gitops/scaling/: api.yml
api/gitops/serviceaccounts/: manifest.yml
api/src/stock/data/api/: README.md  config.py  dependencies.py  json_web_token.py  main.py
api/tests/: test_main.py
src/stock/data/api/: database.py  main.py
tests/: test_main.py
