[tool.poetry]
name = "stock.data.api"
version = "0.1.0"
description = ""
authors = ["piroinno <peter.irojah@piroinno.com>"]
readme = "README.md"
packages = [{include = "stock", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "1.12.0"
azure-storage-file-datalake = "12.10.1"
fastapi = "0.94.1"
psycopg2 = "2.9.5"
pydantic = {version = "1.10.6", extras = ["dotenv"]}
pytz = "2022.7.1"
SQLAlchemy = "2.0.6"
uvicorn = "0.21.0"
flagsmith = "3.2.0"
pytest = "7.2.2"
stock-data-model = "^0.1.15"
flake8 = "^6.0.0"
secure = "^0.3.0"
python-dotenv = "^1.0.0"

[[tool.poetry.source]]
name = "pypifeed"
url = "https://pkgs.dev.azure.com/piroinno/StockData/_packaging/pypifeed/pypi/simple/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]